--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <div class="text">
                 <h2>What artifacts are there?</h2>
                     <p>
-                    There is a bunch of different artifacts that you have to carefully distrubute between your characters, so that they can reach their highest potential.
-                    Question is, what artifacts are there, and for what characters is each one the best?
+                    There is a bunch of different artifacts that you have to carefully distrubute between your characters so that they can reach their highest potential.
+                    Question is, what artifacts are there, and for what characters are what artifacts good?
                     </p>
                 </div>
         </section>
@@ -51,7 +51,7 @@
                 <div class="text">
                 <h2>What do i need them for?</h2>
                     <p>
-                        Artifacts go with your character, and choosing which ones depend on your choice of build. Each character can be built X different ways, so it is up to you to choose
+                        Artifacts are used to empower your characters, thanks so them, you can hit BIG NUMBERS. Each character can be built X different ways, so it is up to you to choose
                         which ones will suit your idea better.
                     </p>
                 </div>
@@ -61,8 +61,8 @@
                 <div class="text">
                 <h2>Where can i farm them?</h2>
                     <p>
-                        They can be farmed in domains, that you can unlock all over Teyvat. Some domains require more brain work for their unlock, and some require zero. 
-                        There are a few artifacts, that cannot be farmed via normal means. Getting those is significantly more difficult, since you can only obtain them through
+                        They can be farmed in domains that you can unlock all over Teyvat. Some domains require more brain work for their unlock and some require zero. 
+                        There are a few artifacts that cannot be farmed via normal means. Getting those is significantly more difficult, since you can only obtain them through
                         weekly bosses, ordinary bosses and quests. 
                     </p>
                 </div>
